attempt at fix opacity issue on safari

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@
   transform: translate3d(0, -50px, 0);
   transition: all 0.3s cubic-bezier(0.5, 0.43, 0.81, 0.59);
   width: 100%;
+  z-index: 1;
 }
 
 .hidden-content.hidden-content--fade-in {
